tests/miniJava/neg/006718_mutation.MiniJava
class java { public static void void ( String [ ] java ) { { } } }
